gccida/g0/maybe_eliminate_biv_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9079:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+44h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9081:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+50h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9084:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+60h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9084:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+60h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9085:1: error: use of undeclared identifier 'induction_1'
induction_1 *va; // [rsp+60h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9085:14: error: use of undeclared identifier 'va'
induction_1 *va; // [rsp+60h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9086:1: error: use of undeclared identifier 'induction_1'
induction_1 *vb; // [rsp+60h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9086:14: error: use of undeclared identifier 'vb'
induction_1 *vb; // [rsp+60h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9087:1: error: use of undeclared identifier 'induction_1'
induction_1 *vc; // [rsp+60h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9087:14: error: use of undeclared identifier 'vc'
induction_1 *vc; // [rsp+60h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9088:1: error: use of undeclared identifier 'induction_1'
induction_1 *vd; // [rsp+60h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9088:14: error: use of undeclared identifier 'vd'
induction_1 *vd; // [rsp+60h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9103:7: error: use of undeclared identifier 'vd'
for ( vd = bl_0->giv; vd; vd = vd->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9103:23: error: use of undeclared identifier 'vd'
for ( vd = bl_0->giv; vd; vd = vd->next_iv ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9103:27: error: use of undeclared identifier 'vd'
for ( vd = bl_0->giv; vd; vd = vd->next_iv ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9103:32: error: use of undeclared identifier 'vd'
for ( vd = bl_0->giv; vd; vd = vd->next_iv ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9105:6: error: use of undeclared identifier 'vd'
if ( vd->giv_type == DEST_ADDR && ( rtunion *)vd->location == x->fld ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9105:47: error: use of undeclared identifier 'vd'
if ( vd->giv_type == DEST_ADDR && ( rtunion *)vd->location == x->fld ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/loop.c:9115:7: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/maybe_eliminate_biv_1/src/obj/loop.o] Error 1
